[sc-7890] implement new widget options page (#1155)
* Remove `jest-preset-angular` dependency

`jest-preset-angular` is not used anymore and has a security vulnerability

* Fix sistema tabs style

* Fix widget so we can update the placeholder properly

The previous implementation didn't allow to update the placeholder after the Search bar widget was included in a page.

* [sc-7890] New widget generator page

  - New layout with two tabs on the left panel, widget preview on the right and code snippet as on overlay on the right
  - Categorization of the advanced form
  - update call to Svelte’s `$destroy` method

* cleanup

* Preset tab

* Update pastanaga

* Revert "Remove `jest-preset-angular` dependency"

This reverts commit 6fee159382bafe24c4dc4d9e3c69606ffcaa0a6e.

* Cleanup comments + increase style budget on nucliaDB admin

* Review comments

* [sc-7906] Update sidenav

- Widget generator out of KB settings
- Manage account in user menu

* don't display manage account option only if hasOwnAccount is true

We currently have a weird behavior in the e2e where hasOwnAccount is false even though welcome endpoint returns the right value. We will need to investigate further, but in the meantime using a simple if solve the e2e problem.

* Cleanup

--- a/libs/common/src/assets/i18n/de.json
+++ b/libs/common/src/assets/i18n/de.json
@@ -775,70 +775,6 @@
 	"stash.valid_emails": "Fügen Sie durch Kommas getrennt die E-Mail-Adressen hinzu, von denen E-Mails akzeptiert werden.",
 	"stash.valid_emails_label": "E-Mails",
 	"stash.view_edit_service_access": "Vorhandene API-Schlüssel anzeigen/bearbeiten",
-	"stash.widgets.answers.help": "Generieren Sie eine Antwort auf die Fragen des Benutzers und ermöglichen Sie den Chat mit dem System",
-	"stash.widgets.answers.label": "Antwortgenerierung",
-	"stash.widgets.autocompleteFromNERs.help": "Schlagen Sie NERs vor, um die Suchabfrage automatisch zu vervollständigen",
-	"stash.widgets.autocompleteFromNERs.label": "Autovervollständigung von NERs",
-	"stash.widgets.autofilter.help": "Erkennt in der Benutzerabfrage erwähnte Entitäten und wandelt sie automatisch in Filter um.",
-	"stash.widgets.autofilter.label": "Automatische Filterung",
-	"stash.widgets.configuration": "Widget-Konfiguration",
-	"stash.widgets.created": "Nach Erstellungsdatum filtern",
-	"stash.widgets.created-warning": "Die Filterung basiert auf dem Wert <code>origin.created</code> , sofern dieser in der Ressource angegeben ist. Andernfalls wird standardmäßig das Erstellungsdatum der Ressource verwendet (<code>created</code>).<br> Bitte beachten Sie: Alle Ressourcen, die vor dem 02.11.2023 erstellt wurden, müssen erneut verarbeitet werden, damit <code>origin.created</code> filterbar ist.",
-	"stash.widgets.darkMode.help": "Aktivieren Sie das dunkle Design im Widget",
-	"stash.widgets.darkMode.label": "Dunkler Modus",
-	"stash.widgets.displayMetadata.help": "Zeigen Sie einige Metadaten in den Suchergebnissen an",
-	"stash.widgets.displayMetadata.label": "Metadaten anzeigen",
-	"stash.widgets.entities": "Nach Entitäten filtern",
-	"stash.widgets.filter.help": "Zeigt Filter in der Suchleiste an",
-	"stash.widgets.filter.label": "Filter",
-	"stash.widgets.filter_type": "Filtertypen",
-	"stash.widgets.hideLogo.help": "Nuclia-Logo aus der Suchleiste ausblenden",
-	"stash.widgets.hideLogo.label": "Logo ausblenden",
-	"stash.widgets.hideSources.help": "Verstecken Sie die Quellen, die zur Generierung der Antwort verwendet wurden",
-	"stash.widgets.hideSources.label": "Quellen ausblenden",
-	"stash.widgets.hideThumbnails.help": "Miniaturansichten in Suchergebnissen ausblenden",
-	"stash.widgets.hideThumbnails.label": "Miniaturansichten ausblenden",
-	"stash.widgets.hint_1": "Um die Ergebnisse korrekt lesen zu können, sollte die Breite der Suchleiste nicht weniger als 384 Pixel betragen.",
-	"stash.widgets.hint_2": "Wenn die Hintergrundfarbe Ihrer Suchseite nicht neutral ist, denken Sie daran, Ihrem Suchfeld eine Hintergrundfarbe hinzuzufügen, um die Lesbarkeit zu verbessern.",
-	"stash.widgets.knowledgeGraph.help": "Ermöglicht die Anzeige aller Beziehungen zwischen Entitäten für eine bestimmte Ressource",
-	"stash.widgets.knowledgeGraph.label": "Beziehungsdiagramm",
-	"stash.widgets.labelFamilies": "Filtern Sie nach Etikettenfamilien",
-	"stash.widgets.labels": "Nach Labels filtern",
-	"stash.widgets.navigateToFile.help": "Wenn Sie Nuclia zum Durchsuchen von Webseiten verwenden, wird durch Klicken auf ein Ergebnis die Originaldatei geöffnet, anstatt sie im Viewer anzuzeigen",
-	"stash.widgets.navigateToFile.label": "Navigieren Sie zu Dateien",
-	"stash.widgets.navigateToLink.help": "Wenn Sie Nuclia zum Durchsuchen von Webseiten verwenden, wird durch Klicken auf ein Ergebnis die Originalseite geöffnet, anstatt sie im Viewer anzuzeigen",
-	"stash.widgets.navigateToLink.label": "Navigieren Sie zu Links",
-	"stash.widgets.noBM25forChat.help": "Volltextergebnisse werden nicht zur Generierung von Antworten verwendet",
-	"stash.widgets.noBM25forChat.label": "Nur semantische Ergebnisse für Antworten",
-	"stash.widgets.onlyAnswers.help": "Zeigt Antworten, aber keine Suchergebnisse an. Diese Option ist nur wirksam, wenn die Antwortgenerierung aktiviert ist",
-	"stash.widgets.onlyAnswers.label": "Nur Antworten",
-	"stash.widgets.permalink.help": "Fügen Sie der URL zusätzliche Parameter hinzu, um das direkte Öffnen einer Ressource oder von Suchergebnissen zu ermöglichen",
-	"stash.widgets.permalink.label": "Permalinks",
-	"stash.widgets.placeholder": "Platzhalter für die Suchleiste",
-	"stash.widgets.preselected-filters.help": "Diese Filter werden auf alle Suchanfragen angewendet, ohne dass sie für den Endbenutzer sichtbar sind.",
-	"stash.widgets.preselected-filters.label": "Vorgewählte Filter",
-	"stash.widgets.preselected-filters.placeholder": "Ein Filter pro Zeile",
-	"stash.widgets.preview": "Vorschau",
-	"stash.widgets.prompt.help": "Sie hat Vorrang vor der in den Knowledge Box-Einstellungen definierten Benutzeraufforderung. Hinweis: Die Eingabeaufforderungsstrategie kann sich je nach generativem Modell ändern. Sehen Sie sich die Beispiele auf der Einstellungsseite an.",
-	"stash.widgets.prompt.label": "Benutzer prompt",
-	"stash.widgets.publish_kb": "Sie können es im veröffentlichen",
-	"stash.widgets.publish_kb_link": "Instrumententafel",
-	"stash.widgets.recommendations": "Empfehlungen",
-	"stash.widgets.relations.help": "Zeigt Informationen zu verwandten Entitäten in den Suchergebnissen an",
-	"stash.widgets.relations.label": "Beziehungen",
-	"stash.widgets.snippet": "CODE-AUSZUG",
-	"stash.widgets.suggestions.help": "Schlagen Sie Ergebnisse vor, während Sie eine Suchanfrage eingeben",
-	"stash.widgets.suggestions.label": "Vorschläge",
-	"stash.widgets.suggestLabels.help": "Wenn das Training der Etikettensuchabsicht durchgeführt wurde, werden die auf der Grundlage der Abfrage vorgeschlagenen Etiketten angezeigt",
-	"stash.widgets.suggestLabels.label": "Schlagen Sie Etiketten vor",
-	"stash.widgets.synonyms.help": "Finden Sie Synonyme in der Fuzzy-Suche. Es kann nicht mit der Relationsoption verwendet werden.",
-	"stash.widgets.synonyms.label": "Passen Sie Synonyme an",
-	"stash.widgets.targetNewTab.help": "In neuem Tab öffnen",
-	"stash.widgets.targetNewTab.label": "Ziel: Neuer Tab",
-	"stash.widgets.title": "Such-Widget-Generator",
-	"stash.widgets.warning": "Damit das Widget ordnungsgemäß funktioniert, muss die Knowledge Box <strong>öffentlich sein</strong>.",
-	"stash.widgets.warning-dangerous-snippet": "Gefahrenzone! Damit dieses Widget mit einer privaten Knowledge Box funktioniert, müssen Sie einen API-Schlüssel bereitstellen.",
-	"stash.widgets.warning-dangerous-snippet-details": "Verwenden Sie dieses Snippet nicht auf einer öffentlichen Website.",
 	"stats.endpoint": "NucliaDB-API-Endpunkt",
 	"stats.get_started": "Loslegen",
 	"stats.processing_time": "Bearbeitungszeit",
@@ -905,5 +841,102 @@
 	"user.logout": "Ausloggen",
 	"validation.name_required": "Fügen Sie Ihren Vor- und Nachnamen hinzu",
 	"validation.url_required": "Geben Sie eine gültige URL ein (z. B. https://nuclia.com)",
+	"widget.generator.advanced.display-category.dark-mode.help": "Aktivieren Sie das dunkle Design im Widget",
+	"widget.generator.advanced.display-category.dark-mode.label": "Dunkler Modus",
+	"widget.generator.advanced.display-category.display-metadata.help": "Zeigen Sie einige Metadaten in den Suchergebnissen an",
+	"widget.generator.advanced.display-category.display-metadata.label": "Metadaten anzeigen",
+	"widget.generator.advanced.display-category.hide-logo.help": "Nuclia-Logo aus der Suchleiste ausblenden",
+	"widget.generator.advanced.display-category.hide-logo.label": "Logo ausblenden",
+	"widget.generator.advanced.display-category.hide-thumbnails.help": "Miniaturansichten in Suchergebnissen ausblenden",
+	"widget.generator.advanced.display-category.hide-thumbnails.label": "Miniaturansichten ausblenden",
+	"widget.generator.advanced.display-category.placeholder": "Platzhalter für die Suchleiste",
+	"widget.generator.advanced.display-category.title": "Anzeige",
+	"widget.generator.advanced.generative-answer-category.answers.help": "Generieren Sie eine Antwort auf die Fragen des Benutzers und ermöglichen Sie den Chat mit dem System",
+	"widget.generator.advanced.generative-answer-category.answers.label": "Antwortgenerierung",
+	"widget.generator.advanced.generative-answer-category.hide-sources.help": "Verstecken Sie die Quellen, die zur Generierung der Antwort verwendet wurden",
+	"widget.generator.advanced.generative-answer-category.hide-sources.label": "Quellen ausblenden",
+	"widget.generator.advanced.generative-answer-category.no-bm25-for-chat.help": "Volltextergebnisse werden nicht zur Generierung von Antworten verwendet",
+	"widget.generator.advanced.generative-answer-category.no-bm25-for-chat.label": "Nur semantische Ergebnisse",
+	"widget.generator.advanced.generative-answer-category.only-answers.help": "Zeigt Antworten, aber keine Suchergebnisse an. ",
+	"widget.generator.advanced.generative-answer-category.only-answers.label": "Nur Antworten",
+	"widget.generator.advanced.generative-answer-category.prompt.help": "Sie hat Vorrang vor der in den Knowledge Box-Einstellungen definierten Benutzeraufforderung. Hinweis: Die Eingabeaufforderungsstrategie kann sich je nach generativem Modell ändern. Sehen Sie sich die Beispiele auf der Einstellungsseite an.",
+	"widget.generator.advanced.generative-answer-category.prompt.label": "Benutzer prompt",
+	"widget.generator.advanced.generative-answer-category.title": "Generative Antworten",
+	"widget.generator.advanced.navigation-category.navigate-to-file.help": "Wenn Sie Nuclia zum Durchsuchen von Webseiten verwenden, wird durch Klicken auf ein Ergebnis die Originaldatei geöffnet, anstatt sie im Viewer anzuzeigen",
+	"widget.generator.advanced.navigation-category.navigate-to-file.label": "Navigieren Sie zu Dateien",
+	"widget.generator.advanced.navigation-category.navigate-to-link.help": "Wenn Sie Nuclia zum Durchsuchen von Webseiten verwenden, wird durch Klicken auf ein Ergebnis die Originalseite geöffnet, anstatt sie im Viewer anzuzeigen",
+	"widget.generator.advanced.navigation-category.navigate-to-link.label": "Navigieren Sie zu Links",
+	"widget.generator.advanced.navigation-category.permalink.help": "Fügen Sie der URL zusätzliche Parameter hinzu, um das direkte Öffnen einer Ressource oder von Suchergebnissen zu ermöglichen",
+	"widget.generator.advanced.navigation-category.permalink.label": "Permalinks",
+	"widget.generator.advanced.navigation-category.target-new-tab.help": "Öffnen Sie Links und/oder Dateien in einem neuen Tab",
+	"widget.generator.advanced.navigation-category.target-new-tab.label": "Ziel: Neuer Tab",
+	"widget.generator.advanced.navigation-category.title": "Navigation",
+	"widget.generator.advanced.ner-category.autocomplete-from-ners.help": "Schlagen Sie NERs vor, um die Suchabfrage automatisch zu vervollständigen",
+	"widget.generator.advanced.ner-category.autocomplete-from-ners.label": "Autovervollständigung von NERs",
+	"widget.generator.advanced.ner-category.knowledge-graph.help": "Ermöglicht die Anzeige aller Beziehungen zwischen Entitäten für eine bestimmte Ressource",
+	"widget.generator.advanced.ner-category.knowledge-graph.label": "Beziehungsdiagramm",
+	"widget.generator.advanced.ner-category.relations.help": "Zeigt Informationen zu NERs in den Suchergebnissen an. Kann nicht mit der Option „Synonyme abgleichen“ verwendet werden.",
+	"widget.generator.advanced.ner-category.relations.label": "Beziehungen",
+	"widget.generator.advanced.ner-category.title": "NER",
+	"widget.generator.advanced.search-and-filtering-category.autofilter.help": "Erkennt in der Benutzerabfrage erwähnte Entitäten und wandelt sie automatisch in Filter um.",
+	"widget.generator.advanced.search-and-filtering-category.autofilter.label": "Automatische Filterung",
+	"widget.generator.advanced.search-and-filtering-category.filter.help": "Zeigt Filter in der Suchleiste an",
+	"widget.generator.advanced.search-and-filtering-category.filter.label": "Filter",
+	"widget.generator.advanced.search-and-filtering-category.filter-by-created.help": "Die Filterung basiert auf dem Wert <code>origin.created</code> , sofern dieser in der Ressource angegeben ist. Andernfalls wird standardmäßig das Erstellungsdatum der Ressource verwendet (<code>created</code>).<br> Bitte beachten Sie: Alle Ressourcen, die vor dem 02.11.2023 erstellt wurden, müssen erneut verarbeitet werden, damit <code>origin.created</code> filterbar ist.",
+	"widget.generator.advanced.search-and-filtering-category.filter-by-created.label": "Nach Erstellungsdatum filtern",
+	"widget.generator.advanced.search-and-filtering-category.filter-by-entities": "Nach Entitäten filtern",
+	"widget.generator.advanced.search-and-filtering-category.filter-by-label-families": "Filtern Sie nach Etikettenfamilien",
+	"widget.generator.advanced.search-and-filtering-category.filter-by-labels": "Nach Labels filtern",
+	"widget.generator.advanced.search-and-filtering-category.preselected-filters.field-help": "Filterformat <a href=\"https://docs.nuclia.dev/docs/guides/using/search/#filters\" target=\"_blank\">hier dokumentiert </a>",
+	"widget.generator.advanced.search-and-filtering-category.preselected-filters.label": "Vorgewählte Filter",
+	"widget.generator.advanced.search-and-filtering-category.preselected-filters.placeholder": "Ein Filter pro Zeile, z. B. /icon/application/pdf",
+	"widget.generator.advanced.search-and-filtering-category.preselected-filters.popover-help": "Diese Filter werden auf alle Suchanfragen angewendet, ohne dass sie für den Endbenutzer sichtbar sind.",
+	"widget.generator.advanced.search-and-filtering-category.suggest-labels.help": "Wenn das Training der Etikettensuchabsicht durchgeführt wurde, werden die auf der Grundlage der Abfrage vorgeschlagenen Etiketten angezeigt",
+	"widget.generator.advanced.search-and-filtering-category.suggest-labels.label": "Schlagen Sie Etiketten vor",
+	"widget.generator.advanced.search-and-filtering-category.suggestions.help": "Schlagen Sie Ergebnisse vor, während Sie eine Suchanfrage eingeben",
+	"widget.generator.advanced.search-and-filtering-category.suggestions.label": "Vorschläge",
+	"widget.generator.advanced.search-and-filtering-category.synonyms.help": "Finden Sie Synonyme in der Fuzzy-Suche. Es kann nicht mit der Option „Beziehungen“ verwendet werden.",
+	"widget.generator.advanced.search-and-filtering-category.synonyms.label": "Passen Sie Synonyme an",
+	"widget.generator.advanced.search-and-filtering-category.title": "Suchen und Filtern",
+	"widget.generator.advanced.selected-preset.edited": "(bearbeitet)",
+	"widget.generator.advanced.selected-preset.label": "Aktuelle Voreinstellung:",
+	"widget.generator.configuration": "Widget-Konfiguration",
+	"widget.generator.page-title": "Widget-Konfiguration",
+	"widget.generator.presets.ask.long-description": "Dies ist die von ChatGPT populär gemachte Modalität, bei der der Benutzer eine Frage stellt und eine Antwort erhält. Das System nutzt die Suchergebnisse der „Finden“-Erfahrung, um einen konsistenten Kontext zu erstellen, der von einem großen Sprachmodell zum Generieren der Antwort verwendet wird. Der Benutzer kann Folgefragen stellen, um weitere Informationen zu erhalten.",
+	"widget.generator.presets.ask.short-description": "Eine Antwort bekommen",
+	"widget.generator.presets.ask.title": "Fragen",
+	"widget.generator.presets.ask.what-to-show.answer-and-results": "Die Antwort und die zugehörigen Suchergebnisse",
+	"widget.generator.presets.ask.what-to-show.only-answer": "Nur die Antwort",
+	"widget.generator.presets.ask.what-to-show.question": "Was möchtest du zeigen?",
+	"widget.generator.presets.ask.what-to-show.title": "Antwortausgabe",
+	"widget.generator.presets.copilot.create-copilot-button": "Einen AI-Kopiloten erstellen",
+	"widget.generator.presets.copilot.description": "Ein LLM-Agent, auch KI-Kopilot genannt, soll nicht nur in der Lage sein, mit einem Nutzer durch eine menschenähnliche Konversation zu interagieren, sondern sich auch entsprechend einem vorgegebenen Ziel zu verhalten. Er wird seinen Tonfall, seinen Stil, sein Vokabular, sein Fachgebiet oder sogar seine Meinung beeinflussen.",
+	"widget.generator.presets.copilot.question": "Möchten Sie einen KI-Copiloten definieren?",
+	"widget.generator.presets.copilot.title": "KI-CoPilot",
+	"widget.generator.presets.description": "Wählen Sie eine der Voreinstellungen aus oder passen Sie Ihre eigene auf der Registerkarte „Erweitert“ an.",
+	"widget.generator.presets.discover.long-description": "Bei dieser Erfahrung weiß der Benutzer nicht, was er finden möchte. Sie möchten ein Thema erkunden und verwandte Informationen entdecken. Discovery deckt verwandte Wissensbereiche, Informationen, Daten und Quellen mithilfe von Diagrammtechniken auf.",
+	"widget.generator.presets.discover.short-description": "Erkunden Sie einen Korpus",
+	"widget.generator.presets.discover.title": "Entdecken (beta)",
+	"widget.generator.presets.find.long-description": "Bei dieser Erfahrung sucht der Benutzer nach einer bestimmten Information in einer Ressource oder einem Dokument. Dies erfordert die Rückgabe des Textblocks, in dem die Informationen gefunden werden. Diese Erfahrung basiert auf der oben beschriebenen Standardsucherfahrung, umfasst aber auch eine semantische Suche. Der Benutzer kann in natürlicher Sprache erklären, wonach er sucht, und das System versucht, seine Absicht zu verstehen und die relevanten Informationen zu finden.",
+	"widget.generator.presets.find.short-description": "Finden Sie genaue Informationen in einem großen Korpus",
+	"widget.generator.presets.find.title": "Finden",
+	"widget.generator.presets.search.long-description": "Dies ist die einfachste Sucherfahrung. Der Benutzer möchte ein Dokument finden, das sich mit einem bestimmten Thema befasst und eine Reihe von Schlüsselwörtern bereitstellt. Der Benutzer kann die Ergebnisse durch Filterung und Rangfolge eingrenzen. Das ist es, was die meisten Suchmaschinen heute tun.",
+	"widget.generator.presets.search.short-description": "Ressourcen abrufen",
+	"widget.generator.presets.search.title": "Suche",
+	"widget.generator.presets.search-experience": "Sucherlebnis",
+	"widget.generator.presets.widget-location.application": "Eine bestimmte Anwendung oder ein Dokumenten-Repository",
+	"widget.generator.presets.widget-location.public": "Eine öffentliche Website",
+	"widget.generator.presets.widget-location.question": "Wo wird sich dieses Such-Widget befinden?",
+	"widget.generator.presets.widget-location.title": "Widget-Standort",
+	"widget.generator.preview": "Vorschau",
+	"widget.generator.private-kb-warning.description": "Wenn der Inhalt der Knowledge Box öffentlich sein soll, können Sie ihn über veröffentlichen",
+	"widget.generator.private-kb-warning.link": "Startseite",
+	"widget.generator.private-kb-warning.snippet": "Geben Sie einen API-Schlüssel nicht auf einer öffentlichen oder unsicheren Website preis",
+	"widget.generator.private-kb-warning.title": "Ihre Wissensbox ist privat. Betten Sie dieses Widget nicht in eine öffentliche oder unsichere Webseite ein.",
+	"widget.generator.publish_kb": "Sie können es im veröffentlichen",
+	"widget.generator.publish_kb_link": "Instrumententafel",
+	"widget.generator.snippet": "Code-auszug",
+	"widget.generator.tabs.advanced": "Erweitert",
+	"widget.generator.tabs.presets": "Voreinstellungen",
 	"widget.show-api": "API-Endpunkt anzeigen"
 }
