--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -775,70 +775,6 @@
 	"stash.valid_emails": "Add, separated by comas, the emails addresses from witch emails will be accepted. ",
 	"stash.valid_emails_label": "Emails",
 	"stash.view_edit_service_access": "View / Edit existing API keys",
-	"stash.widgets.answers.help": "Generate a response to the user's questions and allow to chat with the system",
-	"stash.widgets.answers.label": "Answer generation",
-	"stash.widgets.autocompleteFromNERs.help": "Suggest NERs to autocomplete the search query",
-	"stash.widgets.autocompleteFromNERs.label": "Autocomplete from NERs",
-	"stash.widgets.autofilter.help": "Detects entities mentioned in the user query and turns them automatically into filters.",
-	"stash.widgets.autofilter.label": "Automatic filtering",
-	"stash.widgets.configuration": "Widget configuration",
-	"stash.widgets.created": "Filter by creation date",
-	"stash.widgets.created-warning": "Filtering will be based on the <code>origin.created</code> value if provided in the resource, otherwise it will default to the resource creation date (<code>created</code>). <br>Please note: all resources created before 2023-11-02 will have to be reprocessed for <code>origin.created</code> to be filterable.",
-	"stash.widgets.darkMode.help": "Enable dark theme on the widget",
-	"stash.widgets.darkMode.label": "Dark mode",
-	"stash.widgets.displayMetadata.help": "Display some metadata on the search results",
-	"stash.widgets.displayMetadata.label": "Display metadata",
-	"stash.widgets.entities": "Filter by entities",
-	"stash.widgets.filter.help": "Displays filters in search bar",
-	"stash.widgets.filter.label": "Filter",
-	"stash.widgets.filter_type": "Filter types",
-	"stash.widgets.hideLogo.help": "Hide Nuclia logo from search bar",
-	"stash.widgets.hideLogo.label": "Hide logo",
-	"stash.widgets.hideSources.help": "Hide sources used to generate the answer",
-	"stash.widgets.hideSources.label": "Hide sources",
-	"stash.widgets.hideThumbnails.help": "Hide thumbnails in search results",
-	"stash.widgets.hideThumbnails.label": "Hide thumbnails",
-	"stash.widgets.hint_1": "For the correct reading of the results, the width of the search bar should not be less than 384px.",
-	"stash.widgets.hint_2": "If your search page background color isn't neutral, remember to add a background color on your search box to make it easier to read.",
-	"stash.widgets.knowledgeGraph.help": "Allow to show all the relations between entities for a given resource",
-	"stash.widgets.knowledgeGraph.label": "Relations graph",
-	"stash.widgets.labelFamilies": "Filter by label families",
-	"stash.widgets.labels": "Filter by labels",
-	"stash.widgets.navigateToFile.help": "When using Nuclia to search web pages, clicking on a result will open the original file rather than rendering it in the viewer",
-	"stash.widgets.navigateToFile.label": "Navigate to files",
-	"stash.widgets.navigateToLink.help": "When using Nuclia to search web pages, clicking on a result will open the original page rather than rendering it in the viewer",
-	"stash.widgets.navigateToLink.label": "Navigate to links",
-	"stash.widgets.noBM25forChat.help": "Full text results will not be used to generate answers",
-	"stash.widgets.noBM25forChat.label": "Only semantic results for answers",
-	"stash.widgets.onlyAnswers.help": "Displays answers but not search results. This option only has effect if answer generation is enabled",
-	"stash.widgets.onlyAnswers.label": "Only answers",
-	"stash.widgets.permalink.help": "Add extra parameters in URL allowing direct opening of a resource or search results",
-	"stash.widgets.permalink.label": "Permalinks",
-	"stash.widgets.placeholder": "Search bar placeholder",
-	"stash.widgets.preselected-filters.help": "These filters will be applied to any search queries without being visible to the end users.",
-	"stash.widgets.preselected-filters.label": "Preselected filters",
-	"stash.widgets.preselected-filters.placeholder": "One filter by line",
-	"stash.widgets.preview": "Preview",
-	"stash.widgets.prompt.help": "It will take precedence on the user prompt defined in the Knowledge Box settings. Note: the prompt strategy might change depending on the generative model. Check the examples in the settings page.",
-	"stash.widgets.prompt.label": "User prompt",
-	"stash.widgets.publish_kb": "You can publish it from the",
-	"stash.widgets.publish_kb_link": "Dashboard",
-	"stash.widgets.recommendations": "Recommendations",
-	"stash.widgets.relations.help": "Displays information about related entities in the search results",
-	"stash.widgets.relations.label": "Relations",
-	"stash.widgets.snippet": "Code snippet",
-	"stash.widgets.suggestions.help": "Suggest results while typing search query",
-	"stash.widgets.suggestions.label": "Suggestions",
-	"stash.widgets.suggestLabels.help": "When label search intent training has been done, displays labels suggested based on the query",
-	"stash.widgets.suggestLabels.label": "Suggest labels",
-	"stash.widgets.synonyms.help": "Match synonyms in fuzzy search. It cannot be used with the relation option.",
-	"stash.widgets.synonyms.label": "Match synomyms",
-	"stash.widgets.targetNewTab.help": "Open in a new tab",
-	"stash.widgets.targetNewTab.label": "Target new tab",
-	"stash.widgets.title": "Search widget generator",
-	"stash.widgets.warning": "In order for the widget to work properly, the <strong>Knowledge Box must be public</strong>.",
-	"stash.widgets.warning-dangerous-snippet": "Dangerous zone! For this widget to work with a private Knowledge Box you need to provide an API key.",
-	"stash.widgets.warning-dangerous-snippet-details": "Don't use this snippet on a public website.",
 	"stats.endpoint": "NucliaDB API endpoint",
 	"stats.get_started": "Get started",
 	"stats.processing_time": "Processing time",
@@ -905,5 +841,102 @@
 	"user.logout": "Log out",
 	"validation.name_required": "Add your name and surnames",
 	"validation.url_required": "Enter a valid URL (e.g. https://nuclia.com)",
+	"widget.generator.advanced.display-category.dark-mode.help": "Enable dark theme on the widget",
+	"widget.generator.advanced.display-category.dark-mode.label": "Dark mode",
+	"widget.generator.advanced.display-category.display-metadata.help": "Display some metadata on the search results",
+	"widget.generator.advanced.display-category.display-metadata.label": "Display metadata",
+	"widget.generator.advanced.display-category.hide-logo.help": "Hide Nuclia logo from search bar",
+	"widget.generator.advanced.display-category.hide-logo.label": "Hide logo",
+	"widget.generator.advanced.display-category.hide-thumbnails.help": "Hide thumbnails in search results",
+	"widget.generator.advanced.display-category.hide-thumbnails.label": "Hide thumbnails",
+	"widget.generator.advanced.display-category.placeholder": "Search bar placeholder",
+	"widget.generator.advanced.display-category.title": "Display",
+	"widget.generator.advanced.generative-answer-category.answers.help": "Generate a response to the user's questions and allow to chat with the system",
+	"widget.generator.advanced.generative-answer-category.answers.label": "Answer generation",
+	"widget.generator.advanced.generative-answer-category.hide-sources.help": "Hide sources used to generate the answer",
+	"widget.generator.advanced.generative-answer-category.hide-sources.label": "Hide sources",
+	"widget.generator.advanced.generative-answer-category.no-bm25-for-chat.help": "Full text results will not be used to generate answers",
+	"widget.generator.advanced.generative-answer-category.no-bm25-for-chat.label": "Only semantic results",
+	"widget.generator.advanced.generative-answer-category.only-answers.help": "Displays answers but not search results. ",
+	"widget.generator.advanced.generative-answer-category.only-answers.label": "Only answers",
+	"widget.generator.advanced.generative-answer-category.prompt.help": "It will take precedence on the user prompt defined in the Knowledge Box settings. Note: the prompt strategy might change depending on the generative model. Check the examples in the settings page.",
+	"widget.generator.advanced.generative-answer-category.prompt.label": "User prompt",
+	"widget.generator.advanced.generative-answer-category.title": "Generative answers",
+	"widget.generator.advanced.navigation-category.navigate-to-file.help": "When using Nuclia to search web pages, clicking on a result will open the original file rather than rendering it in the viewer",
+	"widget.generator.advanced.navigation-category.navigate-to-file.label": "Navigate to files",
+	"widget.generator.advanced.navigation-category.navigate-to-link.help": "When using Nuclia to search web pages, clicking on a result will open the original page rather than rendering it in the viewer",
+	"widget.generator.advanced.navigation-category.navigate-to-link.label": "Navigate to links",
+	"widget.generator.advanced.navigation-category.permalink.help": "Add extra parameters in URL allowing direct opening of a resource or search results",
+	"widget.generator.advanced.navigation-category.permalink.label": "Permalinks",
+	"widget.generator.advanced.navigation-category.target-new-tab.help": "Open links and/or files in a new tab",
+	"widget.generator.advanced.navigation-category.target-new-tab.label": "Target new tab",
+	"widget.generator.advanced.navigation-category.title": "Navigation",
+	"widget.generator.advanced.ner-category.autocomplete-from-ners.help": "Suggest NERs to autocomplete the search query",
+	"widget.generator.advanced.ner-category.autocomplete-from-ners.label": "Autocomplete from NERs",
+	"widget.generator.advanced.ner-category.knowledge-graph.help": "Allow to show all the relations between entities for a given resource",
+	"widget.generator.advanced.ner-category.knowledge-graph.label": "Relations graph",
+	"widget.generator.advanced.ner-category.relations.help": "Displays information about NERs in the search results. Cannot be used with the \"Match synonyms\" option.",
+	"widget.generator.advanced.ner-category.relations.label": "Relations",
+	"widget.generator.advanced.ner-category.title": "NER",
+	"widget.generator.advanced.search-and-filtering-category.autofilter.help": "Detects entities mentioned in the user query and turns them automatically into filters.",
+	"widget.generator.advanced.search-and-filtering-category.autofilter.label": "Automatic filtering",
+	"widget.generator.advanced.search-and-filtering-category.filter.help": "Displays filters in the search bar",
+	"widget.generator.advanced.search-and-filtering-category.filter.label": "Filter",
+	"widget.generator.advanced.search-and-filtering-category.filter-by-created.help": "Filtering will be based on the <code>origin.created</code> value if provided in the resource, otherwise it will default to the resource creation date (<code>created</code>). <br>Please note: all resources created before 2023-11-02 will have to be reprocessed for <code>origin.created</code> to be filterable.",
+	"widget.generator.advanced.search-and-filtering-category.filter-by-created.label": "Filter by creation date",
+	"widget.generator.advanced.search-and-filtering-category.filter-by-entities": "Filter by entities",
+	"widget.generator.advanced.search-and-filtering-category.filter-by-label-families": "Filter by label families",
+	"widget.generator.advanced.search-and-filtering-category.filter-by-labels": "Filter by labels",
+	"widget.generator.advanced.search-and-filtering-category.preselected-filters.field-help": "Filter format <a href=\"https://docs.nuclia.dev/docs/guides/using/search/#filters\" target=\"_blank\">documented here </a>",
+	"widget.generator.advanced.search-and-filtering-category.preselected-filters.label": "Preselected filters",
+	"widget.generator.advanced.search-and-filtering-category.preselected-filters.placeholder": "One filter by line, like /icon/application/pdf",
+	"widget.generator.advanced.search-and-filtering-category.preselected-filters.popover-help": "These filters will be applied to any search queries without being visible to the end users.",
+	"widget.generator.advanced.search-and-filtering-category.suggest-labels.help": "When label search intent training has been done, displays labels suggested based on the query",
+	"widget.generator.advanced.search-and-filtering-category.suggest-labels.label": "Suggest labels",
+	"widget.generator.advanced.search-and-filtering-category.suggestions.help": "Suggest results while typing search query",
+	"widget.generator.advanced.search-and-filtering-category.suggestions.label": "Suggestions",
+	"widget.generator.advanced.search-and-filtering-category.synonyms.help": "Match synonyms in fuzzy search. It cannot be used with the \"Relations\" option.",
+	"widget.generator.advanced.search-and-filtering-category.synonyms.label": "Match synonyms",
+	"widget.generator.advanced.search-and-filtering-category.title": "Search & filtering",
+	"widget.generator.advanced.selected-preset.edited": "(edited)",
+	"widget.generator.advanced.selected-preset.label": "Current preset:",
+	"widget.generator.configuration": "Widget configuration",
+	"widget.generator.page-title": "Widget configuration",
+	"widget.generator.presets.ask.long-description": "This is the modality made popular by ChatGPT, where the user asks a question and gets an answer. The system leverages the \"Find\" experience search results to build a consistent context that will be used by a large language model to generate the answer. The user can ask follow-up questions to get more information.",
+	"widget.generator.presets.ask.short-description": "Get an answer",
+	"widget.generator.presets.ask.title": "Ask",
+	"widget.generator.presets.ask.what-to-show.answer-and-results": "The answer and the related search results",
+	"widget.generator.presets.ask.what-to-show.only-answer": "Only the answer",
+	"widget.generator.presets.ask.what-to-show.question": "What do you want to show?",
+	"widget.generator.presets.ask.what-to-show.title": "Answer output",
+	"widget.generator.presets.copilot.create-copilot-button": "Create an AI copilot",
+	"widget.generator.presets.copilot.description": "An LLM agent – also called AI copilot – is meant to not only be able to interact with a user through a human-like conversation, but also to behave according to a given goal. It will impact its tone, its style, its vocabulary, its domain of expertise, or even its opinions.",
+	"widget.generator.presets.copilot.question": "Do you want to define an AI Copilot?",
+	"widget.generator.presets.copilot.title": "AI Copilot",
+	"widget.generator.presets.description": "Select one of the presets or customize your own in the \"Advanced\" tab.",
+	"widget.generator.presets.discover.long-description": "In this experience, the user does not know what they want to find. They want to explore a topic and discover related information. Discovery surfaces related pieces of knowledge, information, data, and sources using graph techniques.",
+	"widget.generator.presets.discover.short-description": "Explore a corpus",
+	"widget.generator.presets.discover.title": "Discover (beta)",
+	"widget.generator.presets.find.long-description": "In this experience, the user is looking for a specific piece of information inside a resource or document. This requires returning the text block where the information is found. This experience sits on top of the standard search experience described above but will also involve semantic search. The user can explain what they are looking for in natural language, and the system will try to understand their intent and find the relevant information.",
+	"widget.generator.presets.find.short-description": "Find exact information in a large corpus",
+	"widget.generator.presets.find.title": "Find",
+	"widget.generator.presets.search.long-description": "This is the most basic search experience. The user wants to find a document talking about a specific topic providing as a set of keywords. The user can narrow down the results by filtering and ranking. This is what most search engines do today.",
+	"widget.generator.presets.search.short-description": "Retrieve resources",
+	"widget.generator.presets.search.title": "Search",
+	"widget.generator.presets.search-experience": "Search experience",
+	"widget.generator.presets.widget-location.application": "A specific application or a document repository",
+	"widget.generator.presets.widget-location.public": "A public website",
+	"widget.generator.presets.widget-location.question": "Where will this search widget be located?",
+	"widget.generator.presets.widget-location.title": "Widget location",
+	"widget.generator.preview": "Preview",
+	"widget.generator.private-kb-warning.description": "If the Knowledge Box content is meant to be public, you can publish it from the",
+	"widget.generator.private-kb-warning.link": "home page",
+	"widget.generator.private-kb-warning.snippet": "Don't expose an API key on a public or unsafe website",
+	"widget.generator.private-kb-warning.title": "Your Knowledge Box is private, do not embed this widget in a public or unsafe web page.",
+	"widget.generator.publish_kb": "You can publish it from the",
+	"widget.generator.publish_kb_link": "Dashboard",
+	"widget.generator.snippet": "Code snippet",
+	"widget.generator.tabs.advanced": "Advanced",
+	"widget.generator.tabs.presets": "Presets",
 	"widget.show-api": "Show API endpoint"
 }
